--- a/sec/fvectors.tex
+++ b/sec/fvectors.tex
@@ -2,10 +2,12 @@
 
 \newcommandx{\arrangement}[1][1 = A]{\mathcal{#1}} % arrangement
 
-\section{Combinatorics of generically translated copies of the braid arrangement}
+\section{Combinatorics}
+
+\subsection{Combinatorics of generically translated copies of the braid arrangement}
 \label{sec:kBraidArrangement}
 
-\subsection{Recollection on hyperplane arrangements}
+\subsubsection{Recollection on hyperplane arrangements}
 \label{subsec:arrangements}
 
 %We first briefly recall classical results on the combinatorics of affine hyperplane arrangements, in particular the enumerative connection between their intersection posets and their face lattices due to T.~Zaslavsky~\cite{Zaslavsky}.
@@ -28,7 +30,7 @@
 
 %In this section, we consider the arrangement
 
-\section{Enumerative results for any diagonal} 
+\subsection{Enumerative results for any diagonal} 
 \label{s:facets}
 
 \Guillaume{Vincent, c'est \`a toi de jouer!}
