--- a/sec/tables.tex
+++ b/sec/tables.tex
@@ -90,7 +90,7 @@ $\dim F + \dim G = \dim P$  & \text{Multiplihedra} & 1 & 2 & 8 & 42 & 254 & 1678
 \Guillaume{On garde?}
 
 
-\subsection{Combinatorial formula for facets of the diagonal}
+\subsubsection{Combinatorial formula for facets of the diagonal}
 
 From \cref{thm:facets}, we can deduce a formula for the number of facets of the diagonal:
 
