--- a/sec/introduction.tex
+++ b/sec/introduction.tex
@@ -3,6 +3,19 @@
 \section*{Introduction} 
 \label{s:introduction}
 
+In this article, discrete geometry \emph{informs} higher algebra.
+
+Some purely combinatorial results, whose study is motivated by higher algebra:
+the combinatorially inclined reader can read the first part of this introduction, and go directly to Section 1.
+
+Some higher algebraic results, obtained via discrete geometry: the algebraically inclined reader can read the second part of this introduction, and go directly to Section 2.
+
+The reader who reads the entire article will start feeling the essence of what could be \emph{higher discrete geometry}, a new field of mathematics whose purpose is to use the theory of polytopes in order to study higher algebraic structures and homotopy theory.
+
+\subsection*{Combinatorics}
+
+\subsection*{Higher Algebra}
+
 The purpose of this article is to study cellular diagonals on the permutahedra, which are cellular maps homotopic to the usual thin diagonal $\triangle : P \to P \times P, x \mapsto (x,x)$.
 Such diagonals, and in particular coherent families that we call \emph{operadic} diagonals (see [DEF]), are of interest in algebraic geometry and topology: via the theory of Fulton--Sturmfels \cite{fultonIntersectionTheoryToric1997a}, they give explicit formulas for the cup product on Losev--Manin toric varieties \cite{losevNewModuliSpaces2000}; they define universal tensor products of homotopy operads, and in particular universal tensor products of homotopy associative permutads (shuffle algebras) \cite{LA21}; they allow for the definition of a coproduct on permutahedral sets, which are used to models of two-fold loop spaces \cite{SaneblidzeUmble04}; and their study is moreover needed to pursue the work of Baues aiming at defining explicit combinatorial models for higher iterated loop spaces \cite{bauesGeometryLoopSpaces1980}. 
 Moreover, using the canonical projections to the multiplihedra and the associahedra, they define universal tensor product of $\Ainf$-algebras and $\Ainf$-morphisms \cite{MazuirLA22}.
@@ -21,7 +34,7 @@ corollary: left and right shifts for LA, decomposition of the cube associated to
 
 
 
-\subsection{Conventions}
+\subsection*{Conventions}
 %We use the notations of \cite{LodayVallette12} for operads.
 
 \Guillaume{Please make a new line for each sentence as to facilitate comparison between versions in GitHub}
