Proposition 2.3 pour Vincent

--- a/sec/bijections.tex
+++ b/sec/bijections.tex
@@ -3,7 +3,7 @@
 
 
 
-\subsubsection{The Diagonals}
+\subsubsection{Operadic diagonals}
 
 \begin{definition}
 Let $D(n) := \{ \{I,J\}:I,J \subset \{1,\dots,n\}, |I|= |J|, I\cap J = \emptyset \}$.
