--- a/sec/introduction.tex
+++ b/sec/introduction.tex
@@ -14,6 +14,9 @@ The reader who reads the entire article will start feeling the essence of what c
 
 \subsection*{Combinatorics}
 
+We study the $f$-vector of generically translated copies of the braid arrangement... 
+We use Zaslavsky's Theorem...
+
 \subsection*{Higher Algebra}
 
 The purpose of this article is to study cellular diagonals on the permutahedra, which are cellular maps homotopic to the usual thin diagonal $\triangle : P \to P \times P, x \mapsto (x,x)$.
