--- a/sec/preliminaries.tex
+++ b/sec/preliminaries.tex
@@ -4,10 +4,6 @@
 
 \subsection{Operadic diagonals}
 
-We study the $f$-vector of generically translated copies of the braid arrangement... 
-We use Zaslavsky's Theorem...
-
-
 \subsubsection{Cellular diagonals}
 
 The usual \emph{thin diagonal} of a topological space $X$ is the map $\Delta : X \to X \times X$ defined by $\Delta(x):=(x,x)$ for all $x \in X$.
@@ -39,9 +35,17 @@ The diagonal $\triangle_{(P,\vec v)}$ defines a canonical polytopal subdivision 
     Alternatively, it is the $f$-vector of the polytopal complex~$\pi (\triangle_{(P,\vec v)})$.
 \end{definition}
 
+For the purpose of studying this $f$-vector, one can study the dual of the polytopal complex.
 
+\begin{proposition}
+    The $f$-vector of a cellular diagonal of the permutahedron $\triangle_{(P,\vec v)}$ is given by the opposite of the $f$-vector of the hyperplane arrangement made of the braid arrangement together with a second copy of it, translated in the generic direction $\vec v$. 
+\end{proposition}
+
+\begin{proof}
+    This follows from \cite[Proposition 1.3]{LA21}; \cite[Corollary 1.4]{LA21} describes precisely the intersection poset of this hyperplane arrangement.
+\end{proof}
  
-
+This justifies a posteriori the study of the preceding Section. 
 
 \subsubsection{The LA diagonal on the permutahedra}
 
