Improvements for operadic diagonals

--- a/aux/commands.tex
+++ b/aux/commands.tex
@@ -75,10 +75,19 @@
 \newcommand{\tr}{\mathrm{tr}}
 \newcommand{\id}{\mathrm{id}}
 
+%Operadic diagonals
+\newcommand{\SU}{\mathrm{SU}}
+\newcommand{\LA}{\mathrm{LA}}
+\newcommand{\SUD}{\triangle^{\mathrm{SU}}}
+\newcommand{\LAD}{\triangle^{\mathrm{LA}}}
 
+%Standardisation function
+\DeclareMathOperator{\std}{std}
+
+%Categories
+\newcommand{\op}{\mathrm{op}}
 
 \newcommand{\can}{\mathrm{can}}
-
 \newcommand{\mm}{\mathfrak{m}}
 
 \newcommand{\GL}{\mathrm{GL}}
